infrastructure/k8s/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    name: platform
    tier: platform
    istio-injection: disabled
